--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,13 @@
-# Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+# Welcome to the FlowGPT documentation!
 
-## What is Nextra?
+This documentation is a comprehensive guide to using FlowGPT. It covers everything from getting started to advanced usage.
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+Whether you're a new user or a seasoned pro, you'll find everything you need to know here.
 
-## Documentation
+The documentation is divided into the following sections:
 
-The documentation is available at [https://nextra.site](https://nextra.site).
+* **Getting Started:** This section covers everything you need to know to get started with FlowGPT.
+* **Features:** This section covers all of the features of FlowGPT, including prompts, templates, collections, etc.
+* **Support:** This section answers frequently asked questions about FlowGPT.
+
+We hope you find this documentation helpful!
