added promp endineering docs

--- a/pages/2features/1prompts/3use.mdx
+++ b/pages/2features/1prompts/3use.mdx
@@ -13,15 +13,15 @@ To use a prompt from other prompt engineers on FlowGPT, you will need to follow 
 
 Here are some tips for using prompts from other prompt engineers:
 
-* Read the prompt carefully before using it so you can learn more about prompt engineering.
-* Make sure that you understand what the prompt is asking for.
-* If you are not sure how to use the prompt, you can ask for help in the FlowGPT community.
-* Be patient. It may take some time for the AI model to generate a satisfactory response.
+- Read the prompt carefully before using it so you can learn more about prompt engineering.
+- Make sure that you understand what the prompt is asking for.
+- If you are not sure how to use the prompt, you can ask for help in the FlowGPT community.
+- Be patient. It may take some time for the AI model to generate a satisfactory response.
 
 If you follow these tips, you will be well on your way to using prompts from other prompt engineers to get AI models to do a variety of tasks.
 
 Here are some additional tips for using prompts from other prompt engineers:
 
-* **Test the prompt before using it.** It is always a good idea to test a prompt before using it in a production environment. This will help you to ensure that the prompt is effective and that it does not generate any unwanted results.
-* **Be creative.** Prompts can be used to generate a wide variety of content. Don't be afraid to experiment with different prompts and see what you can create.
-* **Have fun!** Using prompts from other prompt engineers is a great way to explore the potential of AI. So relax, have fun, and see what you can create.
+- **Test the prompt before using it.** It is always a good idea to test a prompt before using it in a production environment. This will help you to ensure that the prompt is effective and that it does not generate any unwanted results.
+- **Be creative.** Prompts can be used to generate a wide variety of content. Don't be afraid to experiment with different prompts and see what you can create.
+- **Have fun!** Using prompts from other prompt engineers is a great way to explore the potential of AI. So relax, have fun, and see what you can create.
