--- a/pages/2features/1prompts/6share.mdx
+++ b/pages/2features/1prompts/6share.mdx
@@ -10,6 +10,6 @@ You can share prompts with other users so that they can use them too. To share a
 
 **Tips**
 
-* You can share multiple prompts at once.
-* You can share prompts with other users who are not logged in to FlowGPT.
-* You can share prompts with other users who are logged in to FlowGPT.
+- You can share multiple prompts at once.
+- You can share prompts with other users who are not logged in to FlowGPT.
+- You can share prompts with other users who are logged in to FlowGPT.
