--- a/pages/2features/1prompts/7comment.mdx
+++ b/pages/2features/1prompts/7comment.mdx
@@ -10,18 +10,18 @@ You can comment on prompts to share your thoughts and ideas. To comment on a pro
 
 **Tips**
 
-* You can comment on multiple prompts.
-* You can comment on prompts that you have saved.
-* You can comment on prompts that you have created.
-* You can upvote and reply on the comments.
-* You can edit or delete your comments.
+- You can comment on multiple prompts.
+- You can comment on prompts that you have saved.
+- You can comment on prompts that you have created.
+- You can upvote and reply on the comments.
+- You can edit or delete your comments.
 
 **Troubleshooting**
 
 If you are having trouble commenting on prompts, here are some things to check:
 
-* Make sure that you are logged in to your account.
-* Make sure that you have entered a comment in the text box.
-* Make sure that you have clicked the **Post** button.
+- Make sure that you are logged in to your account.
+- Make sure that you have entered a comment in the text box.
+- Make sure that you have clicked the **Post** button.
 
 If you are still having trouble commenting on prompts, please contact support.
