--- a/pages/2features/2templates/1what.mdx
+++ b/pages/2features/2templates/1what.mdx
@@ -16,18 +16,17 @@ To use a template on FlowGPT, you will need to follow these steps:
 6. Click on the name of the template prompt that you want to use.
 7. The template mode will be displayed.
 
-
 Here are some tips for using templates on FlowGPT:
 
-* Read the template carefully before using it.
-* Make sure that you understand what the template is asking for. If it ask for the subject, don't put something that is not connected to subject.
-* If you are not sure how to use the template, you can ask for help in the FlowGPT community.
-* Be patient. It may take some time for the AI model to generate a satisfactory response.
+- Read the template carefully before using it.
+- Make sure that you understand what the template is asking for. If it ask for the subject, don't put something that is not connected to subject.
+- If you are not sure how to use the template, you can ask for help in the FlowGPT community.
+- Be patient. It may take some time for the AI model to generate a satisfactory response.
 
 If you follow these tips, you will be well on your way to using templates on FlowGPT to get AI models to do a variety of tasks.
 
 Here are some additional tips for using templates on FlowGPT:
 
-* **Test the template before using it.** It is always a good idea to test a template before using it in a production environment. This will help you to ensure that the template is effective and that it does not generate any unwanted results.
-* **Be creative.** Templates can be used to generate a wide variety of content. Don't be afraid to experiment with different templates and see what you can create.
-* **Have fun!** Using templates on FlowGPT is a great way to explore the potential of AI. So relax, have fun, and see what you can create.
+- **Test the template before using it.** It is always a good idea to test a template before using it in a production environment. This will help you to ensure that the template is effective and that it does not generate any unwanted results.
+- **Be creative.** Templates can be used to generate a wide variety of content. Don't be afraid to experiment with different templates and see what you can create.
+- **Have fun!** Using templates on FlowGPT is a great way to explore the potential of AI. So relax, have fun, and see what you can create.
