--- a/pages/2features/3collections/1what.mdx
+++ b/pages/2features/3collections/1what.mdx
@@ -4,9 +4,9 @@ Collections are a way to organize prompts on FlowGPT. They allow us to group pro
 
 **Benefits of using collections**
 
-* Collections can help you to organize your prompts and to keep track of them.
-* Collections can help you to find the prompts that you are looking for quickly and easily.
-* Collections can help you to share your prompts with others.
+- Collections can help you to organize your prompts and to keep track of them.
+- Collections can help you to find the prompts that you are looking for quickly and easily.
+- Collections can help you to share your prompts with others.
 
 **How to find collections**
 
@@ -15,15 +15,14 @@ On Collections page you can find list of top 10 or top 20 prompts of the week/mo
 
 **Tips**
 
-* You can create multiple collections.
-* You can edit or delete collections.
-* You can add prompts to collections.
-* You can remove prompts from collections.
-* You can share collections with others.
+- You can create multiple collections.
+- You can edit or delete collections.
+- You can add prompts to collections.
+- You can remove prompts from collections.
+- You can share collections with others.
 
 **Examples**
 
 Here are some examples of how to create collections:
 
-* To create a collection for gaming prompts, you could enter the following name and description:
-
+- To create a collection for gaming prompts, you could enter the following name and description:
