--- a/pages/2features/4community/1what.mdx
+++ b/pages/2features/4community/1what.mdx
@@ -6,11 +6,11 @@ The community page is a place where users can come together to discuss, share, a
 
 On the community page, you can:
 
-* **Create discussions:** You can create new discussions about any topic related to AI and FlowGPT. This is a great way to get help, share your ideas, and connect with other users.
-* **Comment on discussions:** You can comment on existing discussions to share your thoughts and feedback. This is a great way to contribute to the conversation and learn from other users.
-* **Vote on discussions:** You can vote on discussions to help determine which ones are the most popular and helpful. This is a great way to show your support for the discussions that you find most valuable.
-* **Follow users:** You can follow other users to stay up-to-date on their discussions and activities. This is a great way to connect with other users who share your interests.
-* **Join the Discord server:** The FlowGPT Discord server is a great place to chat with other users in real time. This is a great way to get help, share your ideas, and connect with other users.
+- **Create discussions:** You can create new discussions about any topic related to AI and FlowGPT. This is a great way to get help, share your ideas, and connect with other users.
+- **Comment on discussions:** You can comment on existing discussions to share your thoughts and feedback. This is a great way to contribute to the conversation and learn from other users.
+- **Vote on discussions:** You can vote on discussions to help determine which ones are the most popular and helpful. This is a great way to show your support for the discussions that you find most valuable.
+- **Follow users:** You can follow other users to stay up-to-date on their discussions and activities. This is a great way to connect with other users who share your interests.
+- **Join the Discord server:** The FlowGPT Discord server is a great place to chat with other users in real time. This is a great way to get help, share your ideas, and connect with other users.
 
 ## How do I get started with the community page?
 
