--- a/pages/1start/2goal/1goal.mdx
+++ b/pages/1start/2goal/1goal.mdx
@@ -10,23 +10,23 @@ If you are interested in using AI models, then FlowGPT is a great place to start
 
 **Here are some of the benefits of using FlowGPT:**
 
-* **Access to a large and growing library of AI prompts**
+- **Access to a large and growing library of AI prompts**
 
 FlowGPT has a large and growing library of AI prompts. This library contains prompts for a variety of tasks, such as generating text, translating languages, writing different kinds of creative content, and answering questions. This means that you can find a prompt for almost any task that you need to do.
 
-* **The ability to create and share your own AI prompts**
+- **The ability to create and share your own AI prompts**
 
 In addition to accessing the library of AI prompts, you can also create and share your own AI prompts. This is a great way to share your creativity with other users and to get help with tasks that you are struggling with.
 
-* **A community of users who are passionate about AI**
+- **A community of users who are passionate about AI**
 
 FlowGPT has a community of users who are passionate about AI. This community is a great place to get help with tasks, to learn about new AI techniques, and to collaborate with other users on projects.
 
-* **A user-friendly interface**
+- **A user-friendly interface**
 
 FlowGPT has a user-friendly interface that makes it easy to use. The interface is designed to be intuitive and easy to learn, even if you are new to AI.
 
-* **Affordability**
+- **Affordability**
 
 FlowGPT is a free platform to use. This means that you can access all of the features of FlowGPT without having to pay a subscription fee.
 
@@ -34,19 +34,19 @@ If you are interested in using AI models to their full potential, then FlowGPT i
 
 **Here are some examples of how you can use FlowGPT:**
 
-* **Generate text**
+- **Generate text**
 
 You can use FlowGPT to generate text for a variety of purposes, such as writing blog posts, creating marketing materials, or generating creative content.
 
-* **Translate languages**
+- **Translate languages**
 
 You can use FlowGPT to translate languages, which can be helpful for traveling, communicating with people from other countries, or learning a new language.
 
-* **Write different kinds of creative content**
+- **Write different kinds of creative content**
 
 You can use FlowGPT to write different kinds of creative content, such as poems, scripts, musical pieces, email, letters, etc.
 
-* **Answer your questions in an informative way**
+- **Answer your questions in an informative way**
 
 You can use FlowGPT to answer your questions in an informative way, which can be helpful for research, learning, or simply getting information.
 
