--- a/pages/2features/1prompts/1what.mdx
+++ b/pages/2features/1prompts/1what.mdx
@@ -6,26 +6,26 @@ Prompts can be as simple as a single word or phrase, or they can be more complex
 
 Here are some examples of prompts:
 
-* **Generate text:**
-    * "Write a poem about a cat."
-    * "Write a blog post about the benefits of using FlowGPT."
-* **Translate languages:**
-    * "Translate this sentence from English to Spanish."
-    * "Translate this document from French to German."
-* **Write different kinds of creative content:**
-    * "Write a script for a short film."
-    * "Write a song about love."
-* **Answer questions in an informative way:**
-    * "What is the capital of France?"
-    * "What is the meaning of life?"
+- **Generate text:**
+  - "Write a poem about a cat."
+  - "Write a blog post about the benefits of using FlowGPT."
+- **Translate languages:**
+  - "Translate this sentence from English to Spanish."
+  - "Translate this document from French to German."
+- **Write different kinds of creative content:**
+  - "Write a script for a short film."
+  - "Write a song about love."
+- **Answer questions in an informative way:**
+  - "What is the capital of France?"
+  - "What is the meaning of life?"
 
 Prompts are a powerful tool that can be used to get AI models to do a variety of tasks. If you are interested in using AI models to their full potential, then you should learn how to write effective prompts.
 
 Here are some tips for writing effective prompts:
 
-* Be clear and concise. The prompt should be clear and easy to understand.
-* Be specific. The prompt should be specific enough to give the AI model a clear idea of what you want it to do.
-* Be creative. The prompt should be creative and allow the AI model to use its imagination.
-* Be patient. It may take some time for the AI model to generate a satisfactory response.
+- Be clear and concise. The prompt should be clear and easy to understand.
+- Be specific. The prompt should be specific enough to give the AI model a clear idea of what you want it to do.
+- Be creative. The prompt should be creative and allow the AI model to use its imagination.
+- Be patient. It may take some time for the AI model to generate a satisfactory response.
 
 If you follow these tips, you will be well on your way to writing effective prompts that can be used to get AI models to do a variety of tasks.
