--- a/pages/2features/1prompts/4save.mdx
+++ b/pages/2features/1prompts/4save.mdx
@@ -12,14 +12,14 @@ You can save prompts to your account so that you can easily access them later. T
 
 **Tips**
 
-* You can save multiple prompts.
-* You can save or delete saved prompts. To do this, click the **My Profile** and click the **Saved Prompts** button. You can access every Prompt you saved and you can delete them from save list.
+- You can save multiple prompts.
+- You can save or delete saved prompts. To do this, click the **My Profile** and click the **Saved Prompts** button. You can access every Prompt you saved and you can delete them from save list.
 
 **Troubleshooting**
 
 If you are having trouble saving prompts, here are some things to check:
 
-* Make sure that you are logged in to your account.
-* Make sure that you have clicked the **Save** button.
+- Make sure that you are logged in to your account.
+- Make sure that you have clicked the **Save** button.
 
 If you are still having trouble saving prompts, please contact support.
