--- a/pages/2features/1prompts/5upvote.mdx
+++ b/pages/2features/1prompts/5upvote.mdx
@@ -14,15 +14,15 @@ You can upvote prompts that you like so that they can be seen by more people. To
 
 **Tips**
 
-* You can upvote multiple prompts.
-* You can upvote prompts that you have saved.
-* You can upvote prompts that you have created.
+- You can upvote multiple prompts.
+- You can upvote prompts that you have saved.
+- You can upvote prompts that you have created.
 
 **Troubleshooting**
 
 If you are having trouble upvoting prompts, here are some things to check:
 
-* Make sure that you are logged in to your account.
-* Make sure that you have clicked the **Upvote** button.
+- Make sure that you are logged in to your account.
+- Make sure that you have clicked the **Upvote** button.
 
 If you are still having trouble upvoting prompts, please contact support.
