--- a/pages/2features/5hackathon/2how.mdx
+++ b/pages/2features/5hackathon/2how.mdx
@@ -12,33 +12,33 @@ The FlowGPT hackathon is a monthly event where users can submit their prompts in
 
 1. Once you have signed up for the FlowGPT, you can submit your prompts by clicking on the "Submit Prompt" button on tha hackathon category page.
 2. Enter the following information:
-    * Prompt name: The name of your prompt.
-    * Prompt description: A brief description of your prompt.
-    * Prompt tags: Tags that describe your prompt.
-    * Bounty: Which category
+   - Prompt name: The name of your prompt.
+   - Prompt description: A brief description of your prompt.
+   - Prompt tags: Tags that describe your prompt.
+   - Bounty: Which category
 3. Click on the "Submit" button.
 
 ### How to win prizes
 
 The winners of the hackathon will be determined based on the following criteria:
 
-* Popularity: The number of likes, saves, shares, comments, views, and prompt usage.
-* Quality: The quality of the prompt. If prompt is longer, then prompt is better. But don't make it too long :)
-* Creativity: The creativity of the prompt. Users love creative prompts.
+- Popularity: The number of likes, saves, shares, comments, views, and prompt usage.
+- Quality: The quality of the prompt. If prompt is longer, then prompt is better. But don't make it too long :)
+- Creativity: The creativity of the prompt. Users love creative prompts.
 
 ### Prizes
 
 The prizes for the hackathon include:
 
-* First place: $500
+- First place: $500
 
 For each category. You can win more categories.
 
 ### Timeline
 
-* The hackathon will be held every month
-* The deadline for submitting prompts is the three days before announment of the winners.
-* The winners of the hackathon will be announced the following week.
+- The hackathon will be held every month
+- The deadline for submitting prompts is the three days before announment of the winners.
+- The winners of the hackathon will be announced the following week.
 
 ### Contact information
 
